[package]
name = "load_secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.0"
aws-sdk-secretsmanager = "0.25.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
tokio = { version = "1.27.0", features = ["full"] }
