[package]
name = "load_secrets"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Optimize relese builds for size
[profile.release]
strip = true
panic = "abort"
opt-level = "z"

[dependencies]
aws-config = "0.55.0"
aws-sdk-secretsmanager = "0.26.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
setenv = "0.1.2"
tokio = { version = "1.27.0", features = ["full"] }
